<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenbackground"
        tools:context=".view.settings.changepassword.ChangePasswordActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvChangePassword"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/MediumTextStyle"
            android:gravity="center"
            android:text="@string/label_change_password_toolbar_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dimen_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/tvChangePassword"
            app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
            app:layout_constraintTop_toTopOf="@+id/tvChangePassword" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePassword">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dimen_170dp"
                    android:layout_height="@dimen/dimen_130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:backgroundTint="@color/transparent"
                    android:contentDescription="@string/app_logo"
                    android:src="@mipmap/signme_logo" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilOldPassword"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    app:startIconDrawable="@drawable/ic_password"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:hint="@string/hint_old_password"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietOldPassword"
                        style="@style/InputOtherStyle"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="15"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNewPassword"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    app:startIconDrawable="@drawable/ic_password"
                    android:hint="@string/hint_new_password"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietNewPassword"
                        style="@style/InputOtherStyle"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="15"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirmPassword"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    app:startIconDrawable="@drawable/ic_password"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:hint="@string/hint_confirm_password"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietConfirmPassword"
                        style="@style/InputOtherStyle"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="15"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/label_change"
                    android:paddingStart="@dimen/_30sdp"
                    android:paddingEnd="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_50sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>