...
                    android:layout_marginEnd="@dimen/dimen_18dp"
                    android:text="@string/label_email_address"
                    android:textColor="@color/signup_title_gray"
                    android:textSize="@dimen/text_dimen_15sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    style="@style/SignupInputStyle"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/dimen_15dp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
...
